--- a/englishwebsite/englishwebsite_app/templates/registration/login.html
+++ b/englishwebsite/englishwebsite_app/templates/registration/login.html
@@ -1,37 +1,44 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-body {font-family: Arial, Helvetica, sans-serif;}
-form {border: 3px solid #f1f1f1;}
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-body{
-    background-color: #ffffff;
-}
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+        }
 
-h2 {
-    font-size: 32px;
-    font-weight: 500;
-    line-height: 42px;
-    text-align: center;
-}
+        form {
+            border: 3px solid #f1f1f1;
+        }
 
-form{
-    height: 520px;
-    width: 400px;
-    background-color: rgba(255,255,255,0.13);
-    position: absolute;
-    transform: translate(-50%,-50%);
-    top: 50%;
-    left: 50%;
-    border-radius: 10px;
-    backdrop-filter: blur(10px);
-    border: 2px solid rgba(255,255,255,0.1);
-    box-shadow: 0 0 40px rgba(8,7,16,0.6);
-    padding: 50px 35px;
-}
-</style>
+        body {
+            background-color: #ffffff;
+        }
+
+        h2 {
+            font-size: 32px;
+            font-weight: 500;
+            line-height: 42px;
+            text-align: center;
+        }
+
+        form {
+            height: 520px;
+            width: 400px;
+            background-color: rgba(255, 255, 255, 0.13);
+            position: absolute;
+            transform: translate(-50%, -50%);
+            top: 50%;
+            left: 50%;
+            border-radius: 10px;
+            backdrop-filter: blur(10px);
+            border: 2px solid rgba(255, 255, 255, 0.1);
+            box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
+            padding: 50px 35px;
+        }
+    </style>
 </head>
 
 <body>
@@ -40,7 +47,9 @@ form{
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Log In</button>
+        <button type="submit" href="/registration/login/">Log In</button>
     </form>
 
 </body>
+
+</html>
