--- a/englishwebsite/englishwebsite_app/templates/barra.html
+++ b/englishwebsite/englishwebsite_app/templates/barra.html
@@ -1,8 +1,10 @@
+{% load static %}
 
+<!DOCTYPE html>
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top py-3">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-        {% if user.is_authenticated%}
-        <li class="nav-item active"><a class="nav-link js-scroll-trigger" href="/"><big> Active exercises </big><span class="sr-only">(current)</span></a></li>
+        {% if user.is_superuser %}
+        <li class="nav-item active"><a class="nav-link js-scroll-trigger" href="/admin"><big> ADMIN </big></a></li>
         {% endif %}
     </ul>
     <ul class="navbar-nav ml-auto nav-flex-icons right">
@@ -13,10 +15,13 @@
                     <big>{{ user.username }}</big>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right dropdown-info" aria-labelledby="navbarDropdownMenuLink-4">
-                    <a class="dropdown-item" href="/yourexercises/">Your exercises </a>
-                    <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
+                    <a class="dropdown-item" href="writing">WRITING</a>
+                    <a class="dropdown-item" href="reading">READING</a>
+                    <a class="dropdown-item" href="listening">LISTENING</a>
+                    <a class="dropdown-item" href="{% url 'logout' %}">LOG OUT</a>
                 </div>
             </li>
+            
         {% else %}
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-4" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
