--- a/englishwebsite/englishwebsite_app/templates/base.html
+++ b/englishwebsite/englishwebsite_app/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -15,19 +16,13 @@
     <!-- Third party plugin CSS-->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" rel="stylesheet" />
 
+    <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}"/>
 </head>
 
-<style>
-    header.centerheader {
-        padding-top: 10rem;
-        padding-bottom: calc(10rem - 3rem);
-        background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url('static/img/homeimage.png');
-        background-position: center;
-        background-repeat: no-repeat;
-        background-attachment: scroll;
-        background-size: cover;
-        }
-</style>
+    <style>
+        header.centerheader {
+            background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url('static/img/homeimage.png');
+    </style>
 
 <body>
     <!--Navbar-->
