--- a/englishwebsite/englishwebsite_app/templates/writing.html
+++ b/englishwebsite/englishwebsite_app/templates/writing.html
@@ -13,36 +13,19 @@
 
 			<header class="major">
 				<h2>WRITING EXERCISES</h2>
-				<p>Click here, for more exercises to practise.</p>
 				<input type="button" onclick="history.back()" name="back" value="BACK TO MAIN">
 			</header>
 
-			<ul class="exercises">
-				<li class="writing1">
-					<h3>Exercise 1</h3>
-					<p>Rellenar con preview de ejercicio 1 -- Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-						Beatae iste odit, commodi quos nemo iure ipsum similique ducimus vero voluptatem possimus non doloremque 
-						magnam reprehenderit repellat magni tempora, aut repudiandae..</p>
-				</li>
-				<li class="writing2">
-					<h3>Exercise 2</h3>
-					<p>Rellenar con preview de ejercicio 2 -- Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-						Beatae iste odit, commodi quos nemo iure ipsum similique ducimus vero voluptatem possimus non doloremque 
-						magnam reprehenderit repellat magni tempora, aut repudiandae..</p>
-				</li>
-				<li class="writing3">
-					<h3>Exercise 3</h3>
-					<p>Rellenar con preview de ejercicio 3 -- Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-						Beatae iste odit, commodi quos nemo iure ipsum similique ducimus vero voluptatem possimus non doloremque 
-						magnam reprehenderit repellat magni tempora, aut repudiandae..</p>
-				</li>
-				<li class="writing4">
-					<h3>Exercise 4</h3>
-					<p>Rellenar con preview de ejercicio 4 -- Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-						Beatae iste odit, commodi quos nemo iure ipsum similique ducimus vero voluptatem possimus non doloremque 
-						magnam reprehenderit repellat magni tempora, aut repudiandae..</p>
-				</li>
-			</ul>
+			<div id="principal">
+				<h2>Exercises for all levels </h2>
+				<ul>
+				  <li><a href="grammar-exercises">Grammar exercises - 1</a></li>
+				  <li><a href="https://agendaweb.org/grammar-exercises-2.html">Grammar exercises - 2</a></li>
+				  <li><a href="https://agendaweb.org/vocabulary-exercises.html">Vocabulary exercises - 1</a></li>
+				  <li><a href="https://agendaweb.org/vocabulary-exercises-2.html">Vocabulary exercises - 2</a></li>
+				  <li><a href="https://agendaweb.org/verbs-exercises.html">Verbs exercises - 1</a></li>
+				  <li><a href="https://agendaweb.org/verbs-exercises-2.html">Verbs exercises - 2</a></li>
+				  <li><a href="https://agendaweb.org/phonetic.html">Phonetic symbols - exercises</a></li>
 		</div>
 	</section>
 </body>
