--- a/englishwebsite/englishwebsite_app/templates/grammar-exercises.html
+++ b/englishwebsite/englishwebsite_app/templates/grammar-exercises.html
@@ -18,7 +18,7 @@
 
 			<ul>
                 <li><a href="alphabet-exercises">Alphabet</a></li>
-                <li><a href="articles-exercises">Articles: a / an / the</a></li>
+                <li><a href="articles-exercises">Articles: a / an</a></li>
             </ul>
 	</section>
 </body>
