--- a/englishwebsite/englishwebsite_app/templates/writing.html
+++ b/englishwebsite/englishwebsite_app/templates/writing.html
@@ -19,9 +19,9 @@
 			<div id="principal">
 				<h2>Exercises for all levels </h2>
 				<ul>
-				  <li><a href="grammar-exercises">Grammar exercises - 1</a></li>
-				  <li><a href="https://agendaweb.org/vocabulary-exercises-2.html">Vocabulary exercises - 2</a></li>
-				  <li><a href="https://agendaweb.org/verbs-exercises.html">Verbs exercises - 1</a></li>
+				  <li><a href="grammar-exercises">Grammar exercises</a></li>
+				  <li><a href="vocabulary-exercises">Vocabulary exercises</a></li>
+				  <li><a href="https://agendaweb.org/verbs-exercises.html">Verbs exercises</a></li>
 		</div>
 	</section>
 </body>
