--- a/englishwebsite/englishwebsite_app/templates/vocabulary-exercises.html
+++ b/englishwebsite/englishwebsite_app/templates/vocabulary-exercises.html
@@ -20,8 +20,8 @@
                 <h1>Countries - nationalities</h1>
                 <h2>Exercises: nationalities </h2>
                 <ol>
-                  <li><a href="america-nationalities">America: countries and nationalities</a></li>
-                  <li><a href="asia-nationalities">Asia: countries and nationalities 1</a></li>
+                  <li><a href="countries-nationalitiesAtoC"> Countries and nationalities A to C</a></li>
+                  <li><a href="countries-nationalitiesC-H">Countries and nationalities C to H</a></li>
     
                 </ol>
   
