--- a/englishwebsite/englishwebsite_app/templates/barra.html
+++ b/englishwebsite/englishwebsite_app/templates/barra.html
@@ -18,6 +18,7 @@
                     <a class="dropdown-item" href="writing">WRITING</a>
                     <a class="dropdown-item" href="reading">READING</a>
                     <a class="dropdown-item" href="listening">LISTENING</a>
+                    <a class="dropdown-item" href="createExercises">CREATE EXERCISES</a>
                     <a class="dropdown-item" href="{% url 'logout' %}">LOG OUT</a>
                 </div>
             </li>
