--- a/englishwebsite/englishwebsite_app/templates/writing.html
+++ b/englishwebsite/englishwebsite_app/templates/writing.html
@@ -29,6 +29,7 @@
 						<details>
 							<summary>Details</summary>
 							<p>{{exercise.activity}}</p>
+							<img src= '{{MEDIA_URL}}{{exercise.file}}' alt="Image for the activiy. If it doesn't exist, you will see this message">
 							<details>
 								<summary>Correct answer</summary>
 								<p>{{exercise.correct_answer}}</p>
