--- a/englishwebsite/englishwebsite_app/templates/base.html
+++ b/englishwebsite/englishwebsite_app/templates/base.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"     
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
@@ -39,7 +40,7 @@
                 <div class="col-lg-10 align-self-end">
                     <img src="{% static '/img/icandoit.jpg' %}" width="400" height="250">
                     <hr class="divider my-4" style="border-color: #d4bd22;"/>
-                </div>
+                </div> 
                 <div class="col-lg-8 align-self-baseline">
                     <p class="text-white-150 font-weight-light mb-5" style="color: white;">
                         Welcome to English web site!
@@ -50,14 +51,6 @@
     </header>
 
     <footer>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
         <div style="background-color: #079748; height: 8px;"></div>
         <div style="background-color: #079748; height: 2px;" class="text-center">
             <div class="container"><div class="small text-center text-muted">Copyright © 2022 - English web</div></div>
