--- a/englishwebsite/englishwebsite_app/templates/alphabet-exercises.html
+++ b/englishwebsite/englishwebsite_app/templates/alphabet-exercises.html
@@ -4,7 +4,14 @@
 <html>
 
 <head>
-  <link rel="stylesheet" type="text/css" href="{% static 'css/exercises.css' %}" />
+		{% comment %} <link rel="stylesheet" type="text/css" href="{% static 'css/exercises.css' %}" /> {% endcomment %}
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		{% comment %} <link rel="stylesheet" type="text/css" href="{% static '/css/login-register.css' %}"/> {% endcomment %}
+		<!-- Bootstrap CSS -->
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" 
+		integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+		<!-- Bootswatch-->
+		<link rel="stylesheet" type="text/css" href="{% static '/css/bootstrap.min.css' %}"/>	
   <script language="javascript" type="text/javascript">
 
     // See commented code at http://www.cats.ohiou.edu/~linguist/jscript/Mchoice.htm
@@ -124,10 +131,19 @@
   <section id="grammar-exercises" class="wrapper style3 special">
     <div class="inner">
 
-      <header class="major">
+      {% comment %} <header class="major">
         <h2>Alphabet excercises!</h2>
         <input type="button" onclick="history.back()" name="back" value="BACK">
-      </header>
+      </header> {% endcomment %}
+      <div class="jumbotron">
+				<h1 class="display-3">ALPHABET EXERCISES!</h1>
+				<p class="lead">In this section you can see the alphabet exercises..</p>
+				<hr class="my-4">
+				<p>If you dont want to see these exercises you can go back.</p>
+				<p class="lead">
+				<a class="btn btn-primary btn-lg" href="grammar-exercises" role="button">GO BACK</a>
+				</p>
+			</div>
 
       <div id="principal">
         <h1>Abc order - exercises</h1>
