--- a/englishwebsite/englishwebsite_app/templates/listening.html
+++ b/englishwebsite/englishwebsite_app/templates/listening.html
@@ -3,19 +3,33 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-	<link rel="stylesheet" type="text/css" href="{% static 'css/exercises.css' %}" />
-</head>
+	<head>
+		{% comment %} <link rel="stylesheet" type="text/css" href="{% static 'css/exercises.css' %}" /> {% endcomment %}
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" type="text/css" href="{% static '/css/login-register.css' %}"/>
+		<!-- Bootstrap CSS -->
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" 
+		integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+		<!-- Bootswatch-->
+		<link rel="stylesheet" type="text/css" href="{% static '/css/bootstrap.min.css' %}"/>
+	</head>
 
 <body>
 	<section id="listeningexercises" class="wrapper style3 special">
 		<div class="inner">
-
-			<header class="major">
+			{% comment %} <header class="major">
 				<h2>LISTENING EXERCISES</h2>
-				
 				<input type="button" onclick="history.back()" name="back" value="BACK TO MAIN">
-			</header>
+			</header> {% endcomment %}
+			<div class="jumbotron">
+				<h1 class="display-3">LISTENING EXERCISES!</h1>
+				<p class="lead">In this section you can see the listening excercises...</p>
+				<hr class="my-4">
+				<p>If you dont want see these excercises, you can go back to hompage.</p>
+				<p class="lead">
+				<a class="btn btn-primary btn-lg" href="homelogin" role="button">HOMEPAGE</a>
+				</p>
+			</div>
 			<ul>
 				{% for exercise in exercise_list %}
 				<li> {{exercise.title_exercise}} - {{exercise.description_exercise}} 
