--- a/englishwebsite/englishwebsite_app/templates/register.html
+++ b/englishwebsite/englishwebsite_app/templates/register.html
@@ -25,13 +25,9 @@
 			</div>
 			<div class="d-flex align-items-center justify-content-center pb-4">
 				<small class="text-muted">
-					Already have and account? <a class="ml-2" href="/accounts/login/">Sign in</a>
+					Already have an account? <a class="ml-2" href="/accounts/login/">Sign in</a>
 				</small>
 			</div>
-			{% comment %} <div class="d-flex align-items-center justify-content-center pb-4">
-				<p class="mb-0 me-2">Don't have an account?</p>
-				<button type="button" class="btn btn-outline-danger">Create new</button>
-			</div> {% endcomment %}
 	</form>
 </div>
 
