--- a/englishwebsite/englishwebsite_app/templates/vocabulary-exercises.html
+++ b/englishwebsite/englishwebsite_app/templates/vocabulary-exercises.html
@@ -3,29 +3,48 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-	<link rel="stylesheet" type="text/css" href="{% static 'css/exercises.css' %}" />
-</head>
+	<head>
+		{% comment %} <link rel="stylesheet" type="text/css" href="{% static 'css/exercises.css' %}" /> {% endcomment %}
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" type="text/css" href="{% static '/css/login-register.css' %}"/>
+		<!-- Bootstrap CSS -->
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" 
+		integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+		<!-- Bootswatch-->
+		<link rel="stylesheet" type="text/css" href="{% static '/css/bootstrap.min.css' %}"/>	
+	</head>
 
 <body>
 	<section id="vocabulary-exercises" class="wrapper style3 special">
 		<div class="inner">
-
-			<header class="major">
+			{% comment %} <header class="major">
 				<h2>Vocabulary excercises!</h2>
 				<input type="button" onclick="history.back()" name="back" value="BACK">
-			</header>
-
-			<div id="principal">
+			</header> {% endcomment %}
+			<div class="jumbotron">
+				<h1 class="display-3">VOCABULARY EXERCISES!</h1>
+				<p class="lead">In this section you can see the vocabulary exercises..</p>
+				<hr class="my-4">
+				<p>If you dont want to see these exercises you can go back.</p>
+				<p class="lead">
+				<a class="btn btn-primary btn-lg" href="writing" role="button">GO BACK</a>
+				</p>
+			</div>
+			{% comment %} <div id="principal">
                 <h1>Countries - nationalities</h1>
                 <h2>Exercises: nationalities </h2>
                 <ol>
-                  <li><a href="countries-nationalitiesAtoC"> Countries and nationalities A to C</a></li>
-                  <li><a href="countries-nationalitiesC-H">Countries and nationalities C to H</a></li>
-    
+                <li><a href="countries-nationalitiesAtoC"> Countries and nationalities A to C</a></li>
+                <li><a href="countries-nationalitiesC-H">Countries and nationalities C to H</a></li>
                 </ol>
-  
-              </div>
+            </div> {% endcomment %}
+			<div id="principal">
+				<h2>Countries and Nationalities - Exercises for all levels!</h2>
+				<div class="list-group">
+					<a href="countries-nationalitiesAtoC" class="list-group-item list-group-item-action">Countries and nationalities A to C</a>
+					<a href="countries-nationalitiesC-H" class="list-group-item list-group-item-action">Countries and nationalities C to H</a>
+				</div>
+			</div>
 	</section>
 </body>
 
