--- a/englishwebsite/englishwebsite_app/templates/writing.html
+++ b/englishwebsite/englishwebsite_app/templates/writing.html
@@ -4,40 +4,54 @@
 <html>
 
 <head>
-	<link rel="stylesheet" type="text/css" href="{% static 'css/exercises.css' %}" />
+	{% comment %} <link rel="stylesheet" type="text/css" href="{% static 'css/exercises.css' %}" /> {% endcomment %}
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="{% static '/css/login-register.css' %}"/>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" 
+    integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <!-- Bootswatch-->
+    <link rel="stylesheet" type="text/css" href="{% static '/css/bootstrap.min.css' %}"/>
 </head>
 
 <body>
 	<section id="writingexercises" class="wrapper style3 special">
 		<div class="inner">
-
-			<header class="major">
+			{% comment %} <header class="major">
 				<h2>WRITING EXERCISES</h2>
-				<input type="button" onclick="history.back()" name="back" value="BACK TO MAIN">
-			</header>
-
-			<div id="principal">
-				<h2>Exercises for all levels </h2>
-				<ul>
-				  <li><a href="grammar-exercises">Grammar exercises</a></li>
-				  <li><a href="vocabulary-exercises">Vocabulary exercises</a></li>
-				</ul>
-				<ul>
-					{% for exercise in exercise_list %}
-					<li> {{exercise.title_exercise}} - {{exercise.description_exercise}} 
-						<br/>
+				<input type="button" class="btn btn-info" onclick="history.back()" name="back" value="BACK TO MAIN">
+			</header> {% endcomment %}
+		<div class="jumbotron">
+			<h1 class="display-3">WRITING EXERCISES!</h1>
+			<p class="lead">In this section you can see the writing excercises...</p>
+			<hr class="my-4">
+			<p>If you dont want see these excercises, you can go back to hompage.</p>
+			<p class="lead">
+			<a class="btn btn-primary btn-lg" href="homelogin" role="button">HOMEPAGE</a>
+			</p>
+		</div>
+		<div id="principal">
+			<h2>Exercises for all levels!</h2>
+			<div class="list-group">
+				<a href="grammar-exercises" class="list-group-item list-group-item-action">Grammar exercises</a>
+				<a href="vocabulary-exercises" class="list-group-item list-group-item-action">Vocabulary exercises</a>
+			</div>
+			<ul>
+				{% for exercise in exercise_list %}
+				<li> {{exercise.title_exercise}} - {{exercise.description_exercise}} 
+					<br/>
+					<details>
+						<summary>Details</summary>
+						<p>{{exercise.activity}}</p>
+						<img src= '{{MEDIA_URL}}{{exercise.file}}' alt="Image for the activiy. If it doesn't exist, you will see this message">
 						<details>
-							<summary>Details</summary>
-							<p>{{exercise.activity}}</p>
-							<img src= '{{MEDIA_URL}}{{exercise.file}}' alt="Image for the activiy. If it doesn't exist, you will see this message">
-							<details>
-								<summary>Correct answer</summary>
-								<p>{{exercise.correct_answer}}</p>
-							</details>
+							<summary>Correct answer</summary>
+							<p>{{exercise.correct_answer}}</p>
 						</details>
-					</li>
-					{% endfor%}
-				</ul>
+					</details>
+				</li>
+				{% endfor%}
+			</ul>
 		</div>
 	</section>
 </body>
